force-app/main/default/objects/Custom_Call_Report__c/Custom_Call_Report__c.object-meta.xml
<CustomObject>
    <label>Custom Call Report</label>
    <nameField>
        <label>Custom Call Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Call Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>