force-app/main/default/objects/Custom_Call_Report__c/fields/Account_Legacy_S2S__c.field-meta.xml
<CustomField>
    <fullName>Account_Legacy_S2S__c</fullName>
    <label>Account Legacy S2S</label>
    <length>255</length>
    <type>Text</type>
</CustomField>