force-app/main/default/objects/Custom_Call_Report__c/fields/Contact_S2S__c.field-meta.xml
<CustomField>
    <fullName>Contact_S2S__c</fullName>
    <label>Contact S2S</label>
    <length>255</length>
    <type>Text</type>
</CustomField>