force-app/main/default/objects/Custom_Call_Report__c/fields/Follow_Up_Items_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Items_Next_Steps__c</fullName>
    <label>Follow Up Items &amp; Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>