force-app/main/default/objects/Custom_Call_Report__c/fields/Hardware__c.field-meta.xml
<CustomField>
    <fullName>Hardware__c</fullName>
    <label>Hardware</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IVG</fullName>
            </value>
            <value>
                <fullName>MCP100</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Omnitracs Mobile Canada (formerly Shaw Mobile)</fullName>
            </value>
            <value>
                <fullName>Roadnet Telematics</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>TM</fullName>
            </value>
            <value>
                <fullName>TT150</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
            <value>
                <fullName>XRS - Android</fullName>
            </value>
            <value>
                <fullName>XRS - WinMo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>