force-app/main/default/objects/Custom_Call_Report__c/fields/Items_for_Executive_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Items_for_Executive_Assistance__c</fullName>
    <label>Items for Executive Assistance</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>