force-app/main/default/objects/Custom_Call_Report__c/fields/Meeting_Objective_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Objective_Agenda__c</fullName>
    <label>Meeting Objective / Agenda</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>