force-app/main/default/objects/Custom_Call_Report__c/fields/Next_Objective_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Next_Objective_Strategy__c</fullName>
    <label>Next Objective/Strategy</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>