force-app/main/default/objects/Custom_Call_Report__c/fields/Omnitracs_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Omnitracs_Attendees__c</fullName>
    <label>Omnitracs Attendees</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>