force-app/main/default/objects/Custom_Call_Report__c/fields/Product_Management_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Product_Management_Attendees__c</fullName>
    <label>Product Management Attendees</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amine Faridi</fullName>
            </value>
            <value>
                <fullName>Andrew Bates</fullName>
            </value>
            <value>
                <fullName>Andy Hicks</fullName>
            </value>
            <value>
                <fullName>Aneil Razvi</fullName>
            </value>
            <value>
                <fullName>Arielle McMahon</fullName>
            </value>
            <value>
                <fullName>Ashlei Mitchell</fullName>
            </value>
            <value>
                <fullName>Bill Mattingly</fullName>
            </value>
            <value>
                <fullName>Bill McHenry</fullName>
            </value>
            <value>
                <fullName>Brenda Cudone</fullName>
            </value>
            <value>
                <fullName>Brian Walton-King</fullName>
            </value>
            <value>
                <fullName>Bryan Slaughenhoupt</fullName>
            </value>
            <value>
                <fullName>Casey Crawford</fullName>
            </value>
            <value>
                <fullName>Chris Chappelear</fullName>
            </value>
            <value>
                <fullName>Chris Taylor</fullName>
            </value>
            <value>
                <fullName>Christian Beatty</fullName>
            </value>
            <value>
                <fullName>Colleen Watson</fullName>
            </value>
            <value>
                <fullName>Craig Powell</fullName>
            </value>
            <value>
                <fullName>Dalia Vazquez</fullName>
            </value>
            <value>
                <fullName>Dallas Miller</fullName>
            </value>
            <value>
                <fullName>Dave Gutz</fullName>
            </value>
            <value>
                <fullName>David Palle</fullName>
            </value>
            <value>
                <fullName>Dawn Lein</fullName>
            </value>
            <value>
                <fullName>Daysha Diaz</fullName>
            </value>
            <value>
                <fullName>Deepak Kadambi</fullName>
            </value>
            <value>
                <fullName>Dhiren Patel</fullName>
            </value>
            <value>
                <fullName>Drew Schimelpfenig</fullName>
            </value>
            <value>
                <fullName>Emmanuel Carranza</fullName>
            </value>
            <value>
                <fullName>Florence Dougherty</fullName>
            </value>
            <value>
                <fullName>Garth Robbins</fullName>
            </value>
            <value>
                <fullName>Hannah Archuleta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>