force-app/main/default/objects/Custom_Call_Report__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AR Review</fullName>
            </value>
            <value>
                <fullName>Authorized Service Centers</fullName>
            </value>
            <value>
                <fullName>BETA Feedback</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Customer Service Visit</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Discuss Alliance Partnership</fullName>
            </value>
            <value>
                <fullName>Executive Visit</fullName>
            </value>
            <value>
                <fullName>Fleet Risk Meeting</fullName>
            </value>
            <value>
                <fullName>Follow Up Net Promoter Survey</fullName>
            </value>
            <value>
                <fullName>General Feedback</fullName>
            </value>
            <value>
                <fullName>General Product Discussion</fullName>
            </value>
            <value>
                <fullName>Inside CSR Account review</fullName>
            </value>
            <value>
                <fullName>Net Promoter Score (NPS) Survey Feedback</fullName>
            </value>
            <value>
                <fullName>New Product Discussion</fullName>
            </value>
            <value>
                <fullName>Operations Meeting</fullName>
            </value>
            <value>
                <fullName>PS MCP/IVG Delivery</fullName>
            </value>
            <value>
                <fullName>PS RDC Delivery</fullName>
            </value>
            <value>
                <fullName>PS RN Delivery</fullName>
            </value>
            <value>
                <fullName>PS XRS Delivery</fullName>
            </value>
            <value>
                <fullName>Quarterly Review Meeting</fullName>
            </value>
            <value>
                <fullName>Roadmap review</fullName>
            </value>
            <value>
                <fullName>Sponsor Letter Call</fullName>
            </value>
            <value>
                <fullName>Strategic Account Meeting</fullName>
            </value>
            <value>
                <fullName>Technical Discussion</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Win/Loss Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>