force-app/main/default/objects/Custom_Call_Report__c/fields/Top_Customer_Issues__c.field-meta.xml
<CustomField>
    <fullName>Top_Customer_Issues__c</fullName>
    <label>Top Customer Issues</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>